infrastructure/kubernetes/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: asyncflow

  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: asyncflow-platform
    app.kubernetes.io/managed-by: kubectl

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

        app.kubernetes.io/name: frontend
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: asyncflow-platform

    spec:
      terminationGracePeriodSeconds: 30

      # securityContext:
      #   runAsNonRoot: true
        # allowPrivilegeEscalation: false

      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname

                labelSelector:
                  matchLabels:
                    app: frontend

      containers:

        - name: frontend

          image: <AWS_ACCOUNT_ID>.dkr.ecr.ap-south-1.amazonaws.com/asyncflow-stage-frontend:latest

          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 250m
              memory: 256Mi

          startupProbe:
            httpGet:
              path: /
              port: http

            failureThreshold: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: http

            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: http

            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          # securityContext:
            # allowPrivilegeEscalation: false
            # readOnlyRootFilesystem: false
            # capabilities:
            #   drop:
            #     - ALL
